# ot-harjoitystyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
poetry-testi/: pyproject.toml
src/: death.py  fonts.py  food.py  gameloop.py  gameover.py  gameover_temp.py  index.py  keyboard.py  keyboard_events.py  keyboard_temp.py  ohtekoodi.py  score.py  snake.py
src/tests/: death_test.py  fonts_test.py  food_test.py  gameloop_test.py  keyboard_test.py  ohtekoodi_test.py  score_test.py  snake_test.py
