[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Lotta Pispa <lotta.pispa@helsinki.fi>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
